# whitespace_normalizer

./: .gitignore  LICENSE  README.md  build.bat  file_version_info.txt  log.py  main.py  pyproject.toml  requirements.txt  whitespace_normalizer.py
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  pre-commit-config.yml
github/workflows/: ci.yml  code-quality.yml  pre-commit-config.yml
src/: core.py  gui.py  log.py
tests/: conftest.py  test_autocorrection.py  test_core.py  test_gui.py  test_gui_module.py  test_gui_widgets.py  test_logs.py  test_normalization.py  test_spelling.py
